--- a/README.html
+++ b/README.html
@@ -1,20 +1,6 @@
-* ![tahaluindo](https://komarev.com/ghpvc/?username=tahaluindo&color=blue) • ![Itsmeafriliyan](https://komarev.com/ghpvc/?username=Itsmeafriliyan&color=red)
+* ![Itsmeafriliyan](https://komarev.com/ghpvc/?username=htr-tech&blueviolet&style=flat-square)
 ### Hi there 👋
-<!--
-**Itsmeafriliyan/Itsmeafriliyan** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.
 
-Here are some ideas to get you started:
-
-
-
-<h1 align="center"> Hello World :) </h1>
-<p align="center">
-•●•
-</p>
-
-<img src="https://github.com/Itsmeafriliyan/Itsmeafriliyan/blob/main/Hello World/status_me_status_90e259db678545f49a41faf12e095d58.jpg" width="640" title="Menu" alt="Menu">
-
-      <!--![](https://github.com/Itsmeafriliyan/Itsmeafriliyan/blob/main/Hello%20World/status_me_status_90e259db678545f49a41faf12e095d58.jpg)-->
 <p align="center"> <h1 align="center"> Hi, I am [ Dvanmeploph - ( Ferly Afriliyan ) ] - 👋</h1> </p>
 <p align="center">
 <a href="https://github.com/Itsmeafriliyan/"><img src="https://img.shields.io/badge/-Github-FFA116?style=for-the-badge&logo=Github&logoColor=black"/> </a>
@@ -24,10 +10,8 @@ Here are some ideas to get you started:
   <b>Hello Programmers!<b> <a href="https://www.facebook.com/Denventa.Xayonara.Team.UnlimitedARMY" target="blank">Dvanmeploph</a> Was Here
 </h1>
 
-<p align="center">      
-  <img src="https://komarev.com/ghpvc/?username=tahaluindo&label=Profil Views&style=flat-square&color=blue"     />
 <p align="center">
-  <img src="https://komarev.com/ghpvc/?username=htr-tech&label=Dev Profil Views&style=flat-square&color=purple"     />
+  <img src="https://komarev.com/ghpvc/?username=htr-tech&blueviolet&style=flat-square"    />
          
 <a href="https://www.facebook.com/Denventa.Xayonara.Team.UnlimitedARMY"><img height="137px" src="https://github-readme-stats.vercel.app/api?username=htr-tech&hide_title=true&hide_border=true&show_icons=true&include_all_commits=true&count_private=true&line_height=21&text_color=000&icon_color=000&bg_color=0,ea6161,ffc64d,fffc4d,52fa5a&theme=graywhite" /><!-- wi*quL3fcV --><img height="137px" src="https://github-readme-stats.vercel.app/api/top-langs/?username=htr-tech&hide=html&hide_title=true&hide_border=true&layout=compact&langs_count=6&exclude_repo=comp426,Redventures-Movie-Quotes&text_color=000&icon_color=fff&bg_color=0,52fa5a,4dfcff,c64dff&theme=graywhite" /></a>
 
@@ -56,7 +40,7 @@ Here are some ideas to get you started:
 <!--START_SECTION:waka-->
 <p align="center" height='130px'> <img src="https://github-readme-stats.vercel.app/api?username=sandhikagalih&show_icons=true&hide_title=true&include_all_commits=true&line_height=21&bg_color=0,64FFDA,64FFDA,A9EFDE,F2FFFC&count_public=true&theme=graywhite" alt="crazychickendev"/> <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=sandhikagalih&layout=compact&show_icons=true&bg_color=0,EFFDF9,CBFFF3,64FFDA&theme=graywhite&hide_title=true" alt="root"/> </p>
 <p align="center">
-    <img src="https://github-readme-streak-stats.herokuapp.com/?user=tahaluindo">
+    <img src="https://github-readme-streak-stats.herokuapp.com/?user=htr-tech">
 </p>
   
   **💻 &nbsp;My Biodata**
