--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
         <div class="flex flex-wrap">
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="mb-3 text-lg font-bold uppercase text-primary">Tentang Saya</h4>
-            <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">My name, Ferly Afriliyan!</h2>
-            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Saya adalah anak yang ber Usia 14 Tahun, Dan asal saya Dari Jawa Barat. Salam Kenal 👋!</p>
+            <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">I`m Ferly Afriliyan!</h2>
+            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Nama saya adalah Ferly Afriliyan dan Sya adalah anak yang ber Usia 14 Tahun, Dan asal saya Dari Jawa Barat. Salam Kenal semuanya 👋!, Berikut adalah Social Media saya</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:pt-10 lg:text-3xl">Mari berteman</h3>
             <p class="mb-6 text-base font-medium text-secondary lg:text-lg">
-              Saya Adalah seorang anak yang sangat Gemar sekali dengan apa yang di sebut sebagai Bahasa Pemrograman.
+              Follow semua Social Media saya. Terima kasih 🗿!.
             </p>
             <div class="flex items-center">
               <!-- Facebook -->
