--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="mb-3 text-lg font-bold uppercase text-primary">Tentang Saya</h4>
             <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">I`m Ferly Afriliyan!</h2>
-            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">Nama saya adalah Ferly Afriliyan dan Sya adalah anak yang ber Usia 14 Tahun, Dan asal saya Dari Jawa Barat. Salam Kenal semuanya 👋!, Berikut adalah Social Media saya</p>
+            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">My name is Ferly Afriliyan & I am a 14 year old child, I Love Python Prigramming. Greetings everyone 👋!, Here is my Social Media</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:pt-10 lg:text-3xl">Mari berteman</h3>
