--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
-              <img src="dist/img/Waifume.png" alt="Ferly Afriliyan" class="relative z-10 mx-auto max-w-full" />
+              <img src="dist/img/Yamato___Icons-removebg.png" alt="Ferly Afriliyan" class="relative z-10 mx-auto max-w-full" />
               <span class="absolute bottom-0 left-1/2 -translate-x-1/2 md:scale-125">
                 <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -210,7 +210,7 @@
         <div class="flex w-full flex-wrap justify-center px-4 xl:mx-auto xl:w-10/12">
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="dist/img/portfolio/Githubme.jpg" alt="Landing Page" width="w-full" />
+              <img src="dist/img/portfolio/JavaScript.jpg" alt="Landing Page" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Github Account</h3>
             <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
