--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
-              <img src="dist/img/Tomiyokagiyu.png" alt="Ferly Afriliyan" class="relative z-10 mx-auto max-w-full" />
+              <img src="dist/img/Waifume.png" alt="Ferly Afriliyan" class="relative z-10 mx-auto max-w-full" />
               <span class="absolute bottom-0 left-1/2 -translate-x-1/2 md:scale-125">
                 <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                   <path
