--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="flex w-full flex-wrap justify-center px-4 xl:mx-auto xl:w-10/12">
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="dist/img/portfolio/JavaScript.jpg" alt="Landing Page" width="w-full" />
+              <img src="dist/img/portfolio/JavaScript.ppg" alt="Landing Page" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Github Account</h3>
             <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
@@ -483,7 +483,7 @@
           </div>
           <p class="text-center text-xs font-medium text-slate-500">
             Dibuat dengan <span class="text-pink-500">❤️</span> oleh <a href="https://www.facebook.com/Denventa.Xayonara.Team.UnlimitedARMY" target="_blank" class="font-bold text-primary">Ferly Afriliyan</a>, menggunakan
-            <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind CSS </a><p class="text-center text-xs font-medium text-slate-500">& Menyempurnakan/Mengganti Dari </p><a href="https://youtube.com/@sandhikagalihWPU" target="_blank" class="font-bold text-primary">Sandhika Galih</a>.
+            <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind CSS </a><p class="text-center text-xs font-medium text-slate-500">& Menambahkan Fitur Dari </p><a href="https://youtube.com/@sandhikagalihWPU" target="_blank" class="font-bold text-primary">Sandhika Galih</a>.
           </p>
         </div>
       </div>
