--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
         <div class="flex w-full flex-wrap justify-center px-4 xl:mx-auto xl:w-10/12">
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <img src="dist/img/portfolio/JavaScript.ppg" alt="Landing Page" width="w-full" />
+              <img src="dist/img/portfolio/JavaScript.png" alt="JavaScript Program" width="w-full" />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Github Account</h3>
+            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">JavaScript Program</h3>
             <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
@@ -220,7 +220,7 @@
               <img src="dist/img/portfolio/MyWebsite.jpg" alt="My Website" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">My Website</h3>
-            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
+            <p class="text-base font-medium text-secondary">Sebuah WebSite yang menampilkan Link ke sSocial Media serta Project-Project tertentu menggunakan HTML, CSS, Javascript & TailwindCSS</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
