--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       }
     </script>
   </head>
-  <body>
+  <body calss="dark:bg-dark">
     <!-- Header Start -->
-    <header class="absolute top-0 left-0 z-10 flex w-full items-center bg-transparent">
+    <header class="dark:bg-dark top-0 left-0 z-10 flex fix w-full items-center bg-transparent">
       <div class="container">
         <div class="relative flex items-center justify-between">
           <div class="px-4">
@@ -200,53 +200,48 @@
         <div class="w-full px-4">
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h4 class="mb-2 text-lg font-semibold text-primary">Portfolio</h4>
-            <h2 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl lg:text-5xl">Project</h2>
+            <h2 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl lg:text-5xl">Project Terbaru</h2>
             <p class="text-md font-medium text-secondary md:text-lg">
-              Beberapa project yang pernah saya buat
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus porro consequuntur alias, commodi nemo enim aliquam ipsam obcaecati? Assumenda, ipsam?
             </p>
           </div>
         </div>
+
         <div class="flex w-full flex-wrap justify-center px-4 xl:mx-auto xl:w-10/12">
-          <div class="mb-12 content p-4 md:w-1/2">
+          <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <a href="./dist/img/portfolio/one.png" data-lightbox="image-1" data-title="Landing Page yufri28"><img src="./dist/img/portfolio/one.png" alt="Landing Page" width="w-full" /></a>
+              <img src="dist/img/portfolio/JavaScript.png" alt="JavaScript Program" width="w-full" />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Landing Page yufri28</h3>
-            <p class="text-base font-medium text-secondary">Ini merupakan web portfolio saya yang pertama ketika belajar html, css dan javascript basic.</p>
+            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">JavaScript Program</h3>
+            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
           </div>
-          <div class="mb-12 content p-4 md:w-1/2">
+          <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <a href="./dist/img/portfolio/two.png" data-lightbox="image-1" data-title="Web Profil dan Pendataan Jemaat Tamariska Maulafa"> <img src="./dist/img/portfolio/two.png" alt="E-Commerce" width="w-full" /></a>
+              <img src="dist/img/portfolio/MyWebsite.jpg" alt="My Website" width="w-full" />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Web Profil dan Pendataan Jemaat Tamariska Maulafa</h3>
-            <p class="text-base font-medium text-secondary">Ini adalah website profil dari gereja GMIT Tamariska Maulafa, dan di dalam website tersebut juga ada pendataan jemaat.</p>
+            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">My Website</h3>
+            <p class="text-base font-medium text-secondary">Sebuah WebSite yang menampilkan Link ke Social Media serta Project-Project tertentu menggunakan HTML, CSS, Javascript & <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">TailwindCSS</a></p>
           </div>
-          <div class="mb-12 content p-4 md:w-1/2">
+          <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <a href="./dist/img/portfolio/three.png" data-lightbox="image-1" data-title="Web App CCA"><img src="./dist/img/portfolio/three.png" alt="Technical Documentation" width="w-full" /></a>
+              <img src="dist/img/portfolio/Twice.png" alt="Github Account" width="w-full" />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Web App CCA</h3>
-            <p class="text-base font-medium text-secondary">Web App ini dibuat untuk lomba CCA.</p>
+            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">E-Commerce</h3>
+            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
           </div>
-          <div class="mb-12 content p-4 md:w-1/2">
+          <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
-              <a href="dist/img/portfolio/four.png" data-lightbox="image-1" data-title="Website Pendataan Jemaat"><img src="dist/img/portfolio/four.png" alt="Tribute Page" width="w-full" /></a>
+              <img src="dist/img/portfolio/CodeProg.jpg" alt="Code Programming" width="w-full" />
             </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Website Pendataan Jemaat</h3>
-            <p class="text-base font-medium text-secondary">Website pendataan jemaat J-YES.</p>
+            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Tribute Page</h3>
+            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
           </div>
-          <div class="mb-12 content p-4 md:w-1/2">
-            <div class="overflow-hidden rounded-md shadow-md">
-              <a href="dist/img/portfolio/five.png" data-lightbox="image-1" data-title="Kamus Bahasa Rote-Delha"><img src="dist/img/portfolio/five.png" alt="Tribute Page" width="w-full" /></a>
-            </div>
-            <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Kamus Bahasa Rote-Delha</h3>
-            <p class="text-base font-medium text-secondary">Kamus ini adalah kamus dalam bahasa Rote-Delha yang dapat menerjemahkan kata dari bahasa Rote-Delha ke bahasa Indonesia dan sebaliknya. Kamus ini belum bisa menerjemahkan kalimat. Kamus ini masih dalam tahap pengembangan, sehingga kosa kata yang ada, masih sangat terbatas. Kamus tersebut dapat diakses melalui (<a href="https://yufri28.github.io/kamus.html" style="color:white">Kamus Bahasa Rote-Delha</a>).</p>
-          </div>
-          <a href="#" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg" id="loadMore">Load More</a>
+        <a href="#" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg" id="loadMore">Load More</a>
         </div>
       </div>
     </section>
     <!-- Portfolio Section End -->
+
 
     <!-- Clients Section Start -->
     <section id="clients" class="bg-slate-800 pt-36 pb-32 dark:bg-slate-300">
