--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       }
     </script>
   </head>
-  <body calss="dark:bg-dark">
+  <body>
     <!-- Header Start -->
     <header class="dark:bg-dark top-0 left-0 z-10 flex fix w-full items-center bg-transparent">
       <div class="container">
