--- a/index.html
+++ b/index.html
@@ -335,6 +335,7 @@
             <h4 class="mb-2 text-lg font-semibold text-primary">Contact</h4>
             <h2 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl lg:text-5xl">Hubungi Saya</h2>
             <p class="text-md font-medium text-secondary md:text-lg">Hubungi saya Menggunakan Email.</p>
+            </div
             <!-- Facebook -->
               <a
                 href="https://www.facebook.com/freya.xyz"
