--- a/index.html
+++ b/index.html
@@ -484,9 +484,8 @@
             </a>
           </div>
           <p class="text-center text-xs font-medium text-slate-500">
-            Dibuat dengan <span class="text-pink-500">❤️</span> oleh <a href="https://www.facebook.com/Denventa.Xayonara.Team.UnlimitedARMY" target="_blank" class="font-bold text-primary">Ferly Afriliyan</a>, menggunakan
-            <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind CSS </a><p class="text-center text-xs font-medium text-slate-500">& Menambahkan Fitur Dari </p><a href="https://youtube.com/@sandhikagalihWPU" target="_blank" class="font-bold text-primary">Sandhika Galih</a>.
-          </p>
+            Dimodifikasi oleh <a href="https://www.facebook.com/Denventa.Xayonara.Team.UnlimitedARMY" target="_blank" class="font-bold text-primary">Ferly Afriliyan</a>, menggunakan
+            <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind CSS </a>
         </div>
       </div>
     </footer>
