--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
             </a>
           </div>
           <p class="text-center text-xs font-medium text-slate-500">
-            Dimodifikasi oleh <a href="https://www.facebook.com/Denventa.Xayonara.Team.UnlimitedARMY" target="_blank" class="font-bold text-primary">Ferly Afriliyan</a>, menggunakan
+            Dimodifikasi oleh <a href="https://www.facebook.com/Denventa.Xayonara.Team.UnlimitedARMY" target="_blank" class="font-bold text-primary">Ferly</a>, menggunakan
             <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">Tailwind CSS</a>
         </div>
       </div>
