--- a/index.html
+++ b/index.html
@@ -213,14 +213,14 @@
               <img src="dist/img/portfolio/JavaScript.png" alt="JavaScript Program" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">JavaScript Program</h3>
-            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
+            <p class="text-base font-medium text-secondary">JavaScript adalah bahasa pemrograman yang digunakan untuk membuat interaktivitas di halaman web, Ini memungkinkan Anda untuk menambahkan logika, validasi formulir, animasi, dan banyak fungsi lainnya.Contoh: function greeting() { alert('Halo, dunia!'); }</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
               <img src="dist/img/portfolio/MyWebsite.jpg" alt="My Website" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">My Website</h3>
-            <p class="text-base font-medium text-secondary">Sebuah WebSite yang menampilkan Link ke Social Media serta Project-Project tertentu menggunakan HTML, CSS, Javascript & <a href="https://tailwindcss.com" target="_blank" class="font-bold text-sky-500">TailwindCSS</a></p>
+            <p class="text-base font-medium text-secondary">Sebuah karya digital yang memancarkan kecanggihan. Dengan menggunakan HTML sebagai dasar, Saya telah membentuk struktur yang kokoh. Kemudian, dengan bantuan CSS, tampilan halaman ini dipadukan menjadi sebuah karya seni, dengan warna, tata letak, dan desain yang mengagumkan. JavaScript memberikan sentuhan ajaib dengan menyematkan fungsi interaktif, seperti animasi halus dan pengalaman pengguna yang luar biasa.</p>
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="overflow-hidden rounded-md shadow-md">
@@ -234,7 +234,7 @@
               <img src="dist/img/portfolio/CodeProg.jpg" alt="Code Programming" width="w-full" />
             </div>
             <h3 class="mt-5 mb-3 text-xl font-semibold text-dark dark:text-white">Tribute Page</h3>
-            <p class="text-base font-medium text-secondary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, iusto! Aliquam, corporis.</p>
+            <p class="text-base font-medium text-secondary">Tribute Page adalah jenis halaman web yang dibuat untuk menghormati atau mengenang seseorang atau sesuatu. Biasanya, halaman ini berisi informasi tentang orang atau hal tersebut, sejarah, prestasi, atau kontribusi mereka.</p>
           </div>
         <a href="#" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg" id="loadMore">Load More</a>
         </div>
