--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
-            <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋, saya <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Ferly Afriliyan</span></h1>
+            <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua , saya <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Ferly Afriliyan</span></h1>
             <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Gamers Android & <span class="text-dark dark:text-white">Programming Python Code</span></h2>
             <p class="mb-10 font-medium leading-relaxed text-secondary">Belajar web programming itu mudah dan menyenangkan bukan. <span class="font-bold text-dark dark:text-white">bukan!</span></p>
 
@@ -110,12 +110,12 @@
           <div class="mb-10 w-full px-4 lg:w-1/2">
             <h4 class="mb-3 text-lg font-bold uppercase text-primary">Tentang Saya</h4>
             <h2 class="mb-5 max-w-md text-3xl font-bold text-dark dark:text-white lg:text-4xl">I`m Ferly Afriliyan!</h2>
-            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">My name is Ferly Afriliyan & I am a 14 year old child, I Love Python Prigramming. Greetings everyone 👋!, Here is my Social Media</p>
+            <p class="max-w-xl text-base font-medium text-secondary lg:text-lg">My name is Ferly Afriliyan & I am a 14 year old child, I Love Python Prigramming. Greetings everyone !, Here is my Social Media</p>
           </div>
           <div class="w-full px-4 lg:w-1/2">
             <h3 class="mb-4 text-2xl font-semibold text-dark dark:text-white lg:pt-10 lg:text-3xl">Mari berteman</h3>
             <p class="mb-6 text-base font-medium text-secondary lg:text-lg">
-              Follow semua Social Media saya. Terima kasih 🗿!.
+              Follow semua Social Media saya. Terima kasih !.
             </p>
             <div class="flex items-center">
               <!-- Facebook -->
@@ -242,14 +242,13 @@
     </section>
     <!-- Portfolio Section End -->
 
-
     <!-- Clients Section Start -->
     <section id="clients" class="bg-slate-800 pt-36 pb-32 dark:bg-slate-300">
       <div class="container">
         <div class="w-full px-4">
           <div class="mx-auto mb-16 text-center">
             <h4 class="mb-2 text-lg font-semibold text-primary">Clients</h4>
-            <h2 class="mb-4 text-3xl font-bold text-white dark:text-dark sm:text-4xl lg:text-5xl">Dibawah ini Adalah Platform Terbaik</h2>
+            <h2 class="mb-4 text-3xl font-bold text-white dark:text-dark sm:text-4xl lg:text-5xl">Yang Pernah Bekerjasama</h2>
             <p class="text-md font-medium text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero suscipit facilis velit!</p>
           </div>
         </div>
@@ -293,7 +292,7 @@
                 <h3>
                   <a href="#" class="mb-3 block truncate text-xl font-semibold text-dark hover:text-primary dark:text-white">Tips Belajar Programming</a>
                 </h3>
-                <p class="mb-6 text-base font-medium text-secondary">Sedikit Tips dari saya jika kalian Ingin menjadi Seseorang yang ahli dalam Bidang Programming adalah... Belajar 🗿!</p>
+                <p class="mb-6 text-base font-medium text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat officia beatae quisquam?</p>
                 <a href="#" class="rounded-lg bg-primary py-2 px-4 text-sm font-medium text-white hover:opacity-80">Baca Selengkapnya</a>
               </div>
             </div>
@@ -333,8 +332,8 @@
         <div class="w-full px-4">
           <div class="mx-auto mb-16 max-w-xl text-center">
             <h4 class="mb-2 text-lg font-semibold text-primary">Contact</h4>
-            <h2 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl lg:text-5xl">Hubungi Saya</h2>
-            <p class="text-md font-medium text-secondary md:text-lg">Hubungi saya Menggunakan Email.</p>
+            <h2 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl lg:text-5xl">Hubungi Kami</h2>
+            <p class="text-md font-medium text-secondary md:text-lg">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Blanditiis, sed.</p>
           </div>
         </div>
 
