--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
       <div class="container">
         <div class="flex flex-wrap">
           <div class="w-full self-center px-4 lg:w-1/2">
-            <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua ðŸ‘‹, saya <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Ferly Afriliyan</span></h1>
+            <h1 class="text-base font-semibold text-primary md:text-xl">Halo Semua 👋‘‹, saya <span class="mt-1 block text-4xl font-bold text-dark dark:text-white lg:text-5xl">Ferly Afriliyan</span></h1>
             <h2 class="mb-5 text-lg font-medium text-secondary lg:text-2xl">Gamers Android & <span class="text-dark dark:text-white">Programming Python Code</span></h2>
             <p class="mb-10 font-medium leading-relaxed text-secondary">Belajar web programming itu mudah dan menyenangkan bukan. <span class="font-bold text-dark dark:text-white">bukan!</span></p>
 
-            <a href="#" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Hubungi Saya</a>
+            <a href="#" class="rounded-full bg-primary py-3 px-8 text-base font-semibold text-white transition duration-300 ease-in-out hover:opacity-80 hover:shadow-lg">Hello! </a>
           </div>
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:right-0 lg:mt-9">
